--- a/src/main/resources/static/css/login&register.css
+++ b/src/main/resources/static/css/login&register.css
@@ -99,6 +99,7 @@
   left: 0;
   width: 50%;
   z-index: 2;
+  margin-top: -150px;
 }
 .container.active .sign-in {
   transform: translateX(100%);
@@ -108,6 +109,7 @@
   width: 50%;
   opacity: 0;
   z-index: 1;
+  margin-top: -150px;
 }
 .agree {
   color: #333;
