--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -67,6 +67,7 @@
     <div class="auth-area">
         <button id="loginBtn">Đăng nhập</button>
         <button id="signupBtn">Đăng ký</button>
+        <button id="signupNtd">Dành cho nhà tuyển dụng</button>
     </div>
 </header>
 <script>
@@ -78,6 +79,12 @@
 
     document.getElementById('signupBtn').addEventListener('click', function() {
         alert('Chuyển đến trang đăng ký');
+        // Chuyển hướng đến trang đăng ký
+        window.location.href = '/auth/register/user';
+    });
+
+    document.getElementById('signupNtd').addEventListener('click', function() {
+        alert('Chuyển đến trang đăng nhập cho nhà tuyển dụng');
         // Chuyển hướng đến trang đăng ký
         window.location.href = '/auth/register/user';
     });
