--- a/src/main/resources/templates/Company/Danhsachtindang.html
+++ b/src/main/resources/templates/Company/Danhsachtindang.html
@@ -11,12 +11,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
-    <link th:href="@{../Company/css/danhsach.css}" rel="stylesheet"/>
+<!--    <link th:href="@{../Company/css/danhsach.css}" rel="stylesheet"/>-->
+	<link rel="stylesheet" href="/Company/css/danhsach.css">
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
 
 	<title>Quản lý tin đăng</title>
 
-	<link th:href="@{../css/app.css}"  rel="stylesheet">
+<!--	<link th:href="@{../css/app.css}"  rel="stylesheet">-->
+	<link rel="stylesheet" href="/css/app.css">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 	<style>
         body {
@@ -494,8 +496,8 @@
 		});
 
 	</script>
-	<script th:src="@{../js/app.js}"></script>
-	<script th:src="@{../Company/js/danhsach.js}"></script>
+	<script src="/js/app.js"></script>
+	<script src="/Company/js/danhsach.js"></script>
 
 
 </body>
