--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -60,6 +60,7 @@
             </div>
 
             <button type="submit">Sign Up</button>
+            <a href="/auth/login">Đã có tài khoản? Đăng Nhập Ngay</a>
         </form>
         <span class="or-divider text-center">Or use your email for register</span>
 
@@ -100,6 +101,7 @@
 <!--                </label>-->
 <!--            </div>-->
             <button type="submit">Sign Up</button>
+            <a href="/auth/login">Đã có tài khoản? Đăng Nhập Ngay</a>
             <span class="text-center">Or use your email for register</span>
 
             <div class="social-icons">
