--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -149,7 +149,7 @@
                 } else if (data.roles.includes("ROLE_USER")) {
                     window.location.href = "/auth/user/dashboard";
                 } else if (data.roles.includes("ROLE_COMPANY")) {
-                    window.location.href = "/job-posts";
+                    window.location.href = "/job-posts/create";
                 } else {
                     window.location.href = "/auth/default/dashboard";
                 }
