--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -147,15 +147,12 @@
                 console.log('User  Info:', data); // Ghi lại thông tin người dùng vào console
                 localStorage.setItem('userInfo', JSON.stringify(data));
 
-                // Chuyển hướng đến trang dựa trên vai trò
-                if (userInfo.roles.includes("ROLE_ADMIN")) {
+                if (userInfo.roles.indexOf("ROLE_ADMIN") !== -1) {
                     window.location.href = "/auth/admin/dashboard";
-
-                } else if (data.roles.includes("ROLE_USER")) {
-                    window.location.href = "http://localhost:8080/";
-                } else if (data.roles.includes("ROLE_COMPANY")) {
+                } else if (userInfo.roles.indexOf("ROLE_USER") !== -1) {
+                    window.location.href = "http://localhost:8080";
+                } else if (userInfo.roles.indexOf("ROLE_COMPANY") !== -1) {
                     window.location.href = "/job-posts/create";
-
                 } else {
                     window.location.href = "/auth/default/dashboard";
                 }
